Body Background color white

--- a/css/edit.css
+++ b/css/edit.css
@@ -2,6 +2,9 @@
     font-family: B;
     src: url("../fonts/Comfortaa-Bold.ttf");
 }
+body{
+    background-color: white;
+}
 header{
     height: 60px;
     width: 100%;
